# sports-betting

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: go.yml  python.yml
docs/: arbitrage-and-middles.md  backtesting.md  bankroll-management.md  calibration.md  data-and-features.md  emerging.md  glossary.md  hedging.md  line-shopping-and-account-management.md  market-efficiency.md  monte-carlo.md  odds-and-markets.md  psychology-and-discipline.md  tournament-and-playoff-modeling.md  value-betting.md  weather-modeling.md
docs/architecture/: README.md  data-models.md
docs/foundations/: README.md  market-efficiency.md  odds-and-markets.md  psychology-and-discipline.md  value-betting.md  variance-and-sample-size.md
docs/modeling/: README.md  backtesting.md  data-and-features.md  emerging.md  monte-carlo.md
docs/models/: elo.md  logistic-regression.md  ml-methods.md  quantile-regression.md
docs/sport-specific/: README.md  mlb.md  nba.md  nfl.md  nhl.md  soccer.md
docs/strategy/: README.md  hedging.md  line-shopping-and-account-management.md  prop-betting.md  tournament-and-playoff-modeling.md
internal/bettracking/: bettracking_test.go  csv.go  memory.go  report.go  report_test.go  store.go  types.go
internal/bookmaker/: bookmaker_test.go  client.go  integration_test.go  safe.go  safe_test.go  simulated.go
internal/marketdata/: devig.go  devig_test.go  events.go  memory.go  memory_test.go  null.go  null_test.go  odds.go  odds_test.go  port.go  postgres.go  postgres_test.go  scores.go  scores_test.go  static.go  static_test.go  theoddsapi.go  theoddsapi_test.go  types.go
internal/sizing/: flat.go  kelly.go  sizing_test.go  types.go
internal/valueanalysis/: types.go  types_test.go
scripts/: fetch_nfl_data.py
services/market-data/: Dockerfile  main.go  main_test.go
services/paper-trade/: Dockerfile  main.go  (+1 more)
tests/: conftest.py  test_cli_build.py  test_cli_calibration.py  test_cli_fetch.py
(+126 files in other folders)
