[project]
name = "bet"
version = "0.1.0"
description = "CLI for sports betting modeling and backtesting"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[project.scripts]
bet = "bet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bet"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
