[project]
name = "bet"
version = "0.1.0"
description = "CLI for sports betting modeling and backtesting"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[project.scripts]
bet = "bet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bet"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "nfl-data-py>=0.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  N: pep8-naming
# UP: pyupgrade     B: flake8-bugbear  C4: flake8-comprehensions
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = [
    "B008",  # do not perform function calls in default arguments (used by click)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # allow mixed-case test helper names

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
